tests/should_succeed/deep_import.jou
import "./imported/level1/level2/deep.jou"

def main() -> int:
    do_deep_stuff()  # Output: Deep stuff... Bar Bar 123 456
    return 0
