tests/syntax_error/number_underscore_suffix.jou
def main() -> int:
    return 123_  # Error: invalid number or variable name "123_"
